:sparkles: feat : 화폐 단위 배열 초기화하기 기능 구현